Ignore load status changes after LOAD_FINISHED is emitted

This is a workaround for webkit bug
https://bugs.webkit.org/show_bug.cgi?id=26409.
FIRST_VISUALLY_NON_EMPTY_LAYOUT might be emitted after LOAD_FINISHED, so
we just ignore any status change once LOAD_FINISHED has been set